codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_timer_survives_hidden_row.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 3210
expression: "render_snapshot(&pane, area)"
---
• Working (42s • esc to interrupt)      
                                        
▌                                       
▌ Ask Codex to do anything              
▌                                       
  ? for shortcuts    100% context left
